# DiffCFD

./: .dockerignore  .gitignore  CITATION.cff  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  flagship_flow_litho_results.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
diffcfd/: __init__.py
diffcfd/envs/: __init__.py  base.py  blowing_suction.py  cylinder_wake.py  heat_exchanger.py
diffcfd/export/: __init__.py  vtk.py
diffcfd/geometry/: __init__.py  airfoil.py  filters.py  mesh.py  shapes.py
diffcfd/props/: __init__.py  ideal_gas.py  sco2.py
diffcfd/solvers/: __init__.py  boundary.py  coupled_implicit_diff.py  heat_transfer.py  implicit_diff.py  litho.py  navier_stokes_2d.py  spin_coating.py  turbulence.py
diffcfd/surrogates/: __init__.py  fno.py  geo_fno.py  simple_surrogate.py
diffcfd/utils/: __init__.py  linalg.py  threading.py
diffcfd/workflows/: __init__.py  aero.py  convergence.py  joint_litho_opt.py  pche.py  spin_coat_opt.py  topology.py
docs/: benchmark_charts.py  rust-reform-plan.md  thread_affinity_profiling.md
examples/: 01_implicit_differentiation.py  02_topology_optimization.py  03_gymnasium_cylinder.py
notebooks/: 01_basic_simulation.ipynb  02_shape_optimization.ipynb
plans/: adr-001-framework-gate.md  adr-002-thread-affinity.md  development-plan.md
scripts/: collect_paper_results.py  cross_validate.py  flagship_flow_litho.py  profile_results.json  profile_thread_contention.py
src/: lib.rs  momentum.rs  pressure.rs  sdf.rs  simple.rs  utils.rs
tests/: conftest.py
tests/benchmarks/: __init__.py  benchmark_performance.py  benchmark_suite.py
tests/unit/: test_airfoil.py  test_blowing_suction.py  test_boundary.py  test_coupled_implicit.py  test_edge_cases.py  test_envs.py  test_filters.py  test_flagship_flow_litho.py  test_golden_contract.py  test_heat_transfer.py  test_joint_litho.py  test_linalg.py  test_mesh.py  test_pche.py  test_polynomial_eos.py  test_sco2.py  (+3 more)
(+10 files in other folders)
