[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "diffcfd"
version = "0.7.0"
description = "Differentiable Computational Fluid Dynamics for Steady-State Inverse Design and Reinforcement Learning"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "numpy",
    "scipy",
    "gymnasium>=0.26",
    "diff-surrogate @ git+https://github.com/telleroutlook/diff-surrogate.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pyamg",
    "matplotlib",
]
vtk = [
    "vtk",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "diffcfd._diffcfd_rust"
python-packages = ["diffcfd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require a full solver run (deselect with -m 'not slow')",
    "validation: marks tests against reference data (Ghia 1982, analytical solutions)",
]
